fixed the bug that caused too long gifs

--- a/www/styles.css
+++ b/www/styles.css
@@ -81,7 +81,6 @@ button {
     color: #fff;
     border: none;
     border-radius: 5px;
-    cursor: pointer;
     width: 100%;
 }
 
